package com.ecommerce.model.shared;

public interface Discountable {
    double applyDiscount();
}
