package com.ecommerce.model.shared;

public interface Payable {
    double getPayableAmount();
}
