package com.ecommerce.model.shared;

public interface Shippable {
    String getShippingLabel();
}
